Ignore whitespace input in fakebox when focused

This change fixes the bug from the omnibox side. When the fakebox is
focused, the omnibox will be in an "invisible focus" state. So these
changes prevent the focus state to change if whitespace is inputted or
pasted into the fakebox. The existing behaviour for dragging whitespace
text into the fakebox does not hide the fakebox. That was not changed.

A small change was made to the fakebox cursor, so when the fakebox is
hidden, hovering over that area shows the default cursor instead of the
text cursor.

R=ramyan@chromium.org, treib@chromium.org

Bug: 727302
Cq-Include-Trybots: luci.chromium.try:closure_compilation
Change-Id: Id075e3e52113d5e8e27e2e1bab74926a6b8bc723
Reviewed-on: https://chromium-review.googlesource.com/1127488
Commit-Queue: Justin Donnelly <jdonnelly@chromium.org>
Reviewed-by: Justin Donnelly <jdonnelly@chromium.org>
Reviewed-by: Marc Treib <treib@chromium.org>
Cr-Commit-Position: refs/heads/master@{#575188}
Former-commit-id: 51d7d8c93f1ea6d42cc49397b765be90e5aaf667